[tool.poetry]
name = "python-web"
version = "0.1.0"
description = "personal assistant with poetry"
authors = ["JOKER <134328732+J0KERmin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
